fixed media query spacing issue on home page and form css changes

--- a/app/assets/stylesheets/devise_forms.scss
+++ b/app/assets/stylesheets/devise_forms.scss
@@ -35,16 +35,6 @@
     padding: 4px 15px 3px 15px;
     margin: 25px 0 0 0;
   }
-  button{
-    background-color: rgba(225, 225, 225, 0.8);
-    border-radius: 5px;
-    padding: 3px 6px 3px 6px;
-    margin: 3px auto;
-  }
-  a{
-    text-decoration:none;
-    color:black;
-  }
 }
 
 @media screen and (max-width: 550px) {
