--- a/app/assets/stylesheets/recipe_home.scss
+++ b/app/assets/stylesheets/recipe_home.scss
@@ -65,7 +65,6 @@
   min-width: 250px;
   text-decoration: none;
   color: black;
-  border-radius: 10px;
   display: inline-block;
   background-color: white;
   box-shadow: 2px 6px 3px #888888;
@@ -78,12 +77,15 @@
     min-width: 250px;
     text-decoration: none;
     color: black;
-    border-radius: 10px;
     display: inline-block;
     background-color: white;
     box-shadow: 2px 6px 3px #888888;
     margin:10px 0 30px 0;
     padding:20px 0 20px 0;
+  }
+  :hover{
+    text-decoration:none;
+    color: black;
   }
 }
 .top_full_wrapper{
@@ -151,7 +153,7 @@
     min-width: 250px;
     display: block;
     float: none;
-    margin: 30px auto;
+    margin: 10px auto 10px;
     padding: auto;
     width: 100%;
 
@@ -160,7 +162,7 @@
   .featured_recipe_middle {
     min-width: 250px;
     display: block;
-    margin: 30px auto;
+    margin: 10px auto;
     padding: auto;
     width: 100%;
   }
@@ -169,12 +171,12 @@
     min-width: 250px;
     display: block;
     float: none;
-    margin: 30px auto;
+    margin: 10px auto;
     padding: auto;
     width: 100%;
   }
   .top_bars{
-    margin-top: 60px;
+    margin-top: 175px;
   }
 }
 
@@ -214,7 +216,6 @@
 .top_bars li{
   display: inline-block;
   box-shadow: 2px 6px 3px #888888;
-  border-radius: 10px;
   background-color: rgb(248,248,248);
 }
 .yelp_title{
